--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <style>
 body{font-family:Arial;padding:15px}
 select,input,button{width:100%;padding:10px;margin:6px 0}
-canvas{border:1px solid #000;width:100%;height:150px}
+canvas{border:1px solid #000;width:100%;height:150px;touch-action: none;   /* ⬅️ PENTING */}
+body.noscroll{overflow: hidden;position: fixed;width: 100%;}
 </style>
 </head>
 <body>
@@ -56,19 +57,42 @@ const canvas=document.getElementById("sign");
 const ctx=canvas.getContext("2d");
 let draw=false;
 
-canvas.addEventListener("touchstart",()=>draw=true);
-canvas.addEventListener("touchend",()=>{draw=false;ctx.beginPath()});
-canvas.addEventListener("touchmove",e=>{
- if(!draw)return;
- const t=e.touches[0],r=canvas.getBoundingClientRect();
- ctx.lineWidth=2;ctx.lineCap="round";
- ctx.lineTo(t.clientX-r.left,t.clientY-r.top);
- ctx.stroke();ctx.beginPath();
- ctx.moveTo(t.clientX-r.left,t.clientY-r.top);
-});
+canvas.addEventListener("touchstart", e => {
+  e.preventDefault();            // ⬅️ KUNCI SCROLL
+  document.body.classList.add("noscroll");
+  drawing = true;
+
+  const t = e.touches[0];
+  const r = canvas.getBoundingClientRect();
+  ctx.beginPath();
+  ctx.moveTo(t.clientX - r.left, t.clientY - r.top);
+},{ passive:false });
+
+// GAMBAR
+canvas.addEventListener("touchmove", e => {
+  if (!drawing) return;
+  e.preventDefault();            // ⬅️ KUNCI SCROLL
+
+  const t = e.touches[0];
+  const r = canvas.getBoundingClientRect();
+  ctx.lineWidth = 2;
+  ctx.lineCap = "round";
+  ctx.strokeStyle = "#000";
+
+  ctx.lineTo(t.clientX - r.left, t.clientY - r.top);
+  ctx.stroke();
+},{ passive:false });
+
+// SELESAI GAMBAR
+canvas.addEventListener("touchend", e => {
+  e.preventDefault();
+  drawing = false;
+  ctx.beginPath();
+  document.body.classList.remove("noscroll");
+},{ passive:false });
 
 function clearSign(){
- ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.clearRect(0,0,canvas.width,canvas.height);
 }
 
 /* ===== KIRIM ===== */
@@ -98,3 +122,4 @@ function kirim(){
 
 </body>
 </html>
+
