--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body.noscroll{overflow: hidden;position: fixed;width: 100%;}
 </head>
 <body>
 
-<h3>ABSEN HARIAN DESA</h3>
+<h3>ABSEN HARIAN DESA KUTO 2026</h3>
 
 <select id="pegawai">
   <option value="2">Kepala Desa</option>
@@ -23,7 +23,7 @@ body.noscroll{overflow: hidden;position: fixed;width: 100%;}
   <option value="7">Dwi Sudarno – Kasi Pemerintahan</option>
   <option value="8">Muhsin Basari – Kasi Kesejahteraan</option>
   <option value="9">Arif Sulthon A. – Kasi Pelayanan</option>
-  <option value="10">Agus Cristanto – Kadus Kuto</option>
+  <option value="10">Agus Cristianto – Kadus Kuto</option>
   <option value="11">Kadus Plosorejo</option>
   <option value="12">Kadus Randubener</option>
   <option value="13">Mujimin – Kadus Grobogan</option>
@@ -37,7 +37,7 @@ body.noscroll{overflow: hidden;position: fixed;width: 100%;}
 <label>Jam Pulang</label>
 <input type="time" id="pulang">
 
-<h4>Tanda Tangan</h4>
+<h4>Paraf</h4>
 <canvas id="sign"></canvas>
 <button onclick="clearSign()">Hapus TTD</button>
 
@@ -134,6 +134,7 @@ function kirim(){
 
 </body>
 </html>
+
 
 
 
